--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: php
+cache:
+  bundler: true
+  apt: true
+  directories:
+    - "$HOME/.composer/cache"
+    - "$HOME/.npm"
 php:
   - '5.6'
   - '7.0'
