--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ php:
 before_install:
   - composer self-update
   - composer --version
+install:
+  - export PATH="$HOME/.composer/vendor/bin:$TRAVIS_BUILD_DIR/bin:$PATH"
+  - export COMPOSER_EXIT_ON_PATCH_FAILURE=1
