--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,14 @@ php:
   -  7.0
   
 sudo: false
+
+mysql:
+  database: drupal
+  username: root
+  encoding: utf8
   
 before_install:
+  - phpenv config-rm xdebug.ini
   - composer self-update
   - composer --version
 
