--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ cache:
   apt: true
   directories:
     - "$HOME/.composer/cache"
+    - "$HOME/.drush/cache"
     - "$HOME/.npm"
 php:
   -  5.6
-  -  7.0
   
 sudo: false
 
@@ -43,6 +43,9 @@ install:
 
   - composer install
   - bin/behat --init
+
+script:
+  - bin/behat features
 
 matrix:
   fast_finish: true
