--- a/.travis.yml
+++ b/.travis.yml
@@ -48,4 +48,9 @@ script:
   - bin/behat feature
 
 matrix:
+  include:
+    - php: 5.6
+      env: WP_TRAVISCI=travis:phpunit
+ allow_failures:
+    -php: 5.6
   fast_finish: true
