--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ cache:
     - "$HOME/.composer/cache"
     - "$HOME/.drush/cache"
     - "$HOME/.npm"
+
+# see http://about.travis-ci.org/docs/user/languages/php/ for more hints
+language: php
+
 php:
   -  5.6
-  
+  -  hhvm
 sudo: false
 
 mysql:
