--- a/composer.json
+++ b/composer.json
@@ -1,64 +1,21 @@
 {
-  "name":         "Natshah/behat-travis-ci-test",
+  "name":         "DabbaghQA/behat-travis-ci-test",
   "description":  "Testing behat Gherkin Features with travis-ci, which help in the automated testing.",
-  "keywords":     ["web", "testing", "browser", "behat", "gherkin"],
-  "type": "drupal-profile",
-  "license":      "GPL-2.0+",
- "minimum-stability": "dev",
- "prefer-stable": true,
-  
-  "require-dev": {
-        "drush/drush": "^9.0",
-        "drupal/drupal-extension": "^3.2",
-        "jakoch/phantomjs-installer": "1.9.8",
-        "behat/behat": "^3.0",
-        "drupal/coder": "8.*",
-        "phing/phing": "^2.14",
-        "behat/mink": "~1.7",
-        "behat/mink-goutte-driver": "~1.2",
-        "jcalderonzumba/gastonjs": "~1.0.2",
-        "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
-        "mikey179/vfsStream": "~1.2",
-        "phpunit/phpunit": "~4.8",
-        "guzzlehttp/guzzle": "^6.1",
-        "symfony/css-selector": "~2.8",
-        "squizlabs/php_codesniffer": "2.*"
-    },
-    "config": {
-        "bin-dir": "bin/"
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packagist.drupal-composer.org"
-        }
-    ],
-    "scripts": {
-        "post-install-cmd": [
-            "PhantomInstaller\\Installer::installPhantomJS",
-            "@composer drupal-scaffold",
-            "./bin/phing push"
-        ],
-        "post-update-cmd": [
-            "./bin/phing push"
-        ],
-        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
-    },
-    "extra": {
-        "installer-paths": {
-            "docroot": [
-                "drupal/drupal"
-            ],
-            "modules/contrib/{$name}": [
-                "type:drupal-module"
-            ]
-        }
-    },
-    "require": {
-        "cweagans/composer-patches": "^1.5.0",
-        "composer/installers": "^1.0",
-        "drupal/core": "8.1.8",
-        "drupal/config_update": "8.1.1",
-        "drupal/composer_manager": "8.1.0-rc2"
-    }
+  "require": {
+    "jakoch/phantomjs-installer": "1.9.8",
+    "behat/behat": "3.*@stable",
+    "behat/mink-zombie-driver": "@stable",
+    "behat/mink-sahi-driver": "@stable",
+    "behat/mink-goutte-driver": "~1.2",
+    "jcalderonzumba/gastonjs": "~1.0.2",
+    "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
+    "mikey179/vfsStream": "~1.2",
+    "guzzlehttp/guzzle": "^6.1",
+    "symfony/css-selector": "~2.8",
+    "squizlabs/php_codesniffer": "2.*",
+    "phpunit/phpunit": "4.*@stable"
+  },
+  "config": {
+    "bin-dir": "bin/"
+  }
 }
