--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,10 @@ cache:
     - "$HOME/.drush/cache"
     - "$HOME/.npm"
 php:
-  - 5.5
+  - 5.6
+  - 7.0 
   
 sudo: false
-
-mysql:
-  database: drupal
-  username: root
-  encoding: utf8
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -22,12 +18,7 @@ before_install:
   - composer --version
 
 install:
-  - export PATH="$HOME/.composer/vendor/bin:$TRAVIS_BUILD_DIR/bin:$PATH"
 
-  - export COMPOSER_EXIT_ON_PATCH_FAILURE=1
-
-  - mysql -e 'SET GLOBAL wait_timeout = 5400;'
-  - mysql -e "SHOW VARIABLES LIKE 'wait_timeout'"
 
   # PHP Configurations.
   - echo 'max_execution_time = 300' >> drupal.php.ini;
@@ -46,7 +37,7 @@ install:
   - bin/behat --init
   
 script:
-  - bin/behat --strict
+  - bin/behat --features
 
 matrix:
   fast_finish: true
